[package]
name = "quantum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
approx = { version = "0.5.1", features = ["num-complex"] }
bounded-integer = { version = "0.5.8", features = [
    "std",
    "alloc",
    "macro",
    "types",
    "zerocopy",
] }
exhaust = "0.2.1"
itertools = "0.14.0"
nalgebra = "0.33.2"
num-traits = "0.2.19"
rand = "0.9.0"
rand_distr = "0.5.0"
